2008-04-14  Tassilo Horn  <tassilo@member.fsf.org>

	* doc-view.el (doc-view-dvipdf-program): New variable.
	(doc-view-dvipdfm-program): Mention doc-view-dvipdf-program.
	(doc-view-mode-p): Check for doc-view-dvipdf-program as
	alternative for doc-view-dvipdfm-program.
	(doc-view-dvi->pdf): Prefer dvipdf over dvipdfm.

	* doc-view.el (doc-view-start-process): Don't set
	default-directory to "~/" if the current value is valid.  This
	broke PS files that run other files in the same directory.

2008-04-14  Dan Nicolaescu  <dann@ics.uci.edu>

	* vc.el (vc-status-kill-query): New function.
	(vc-status-mode): Add it to kill-buffer-query-functions.
	(vc-status-show-fileentry): New function.
	(vc-status-menu-map): Bind it.  Bind vc-next-action.

2008-04-14  Stefan Monnier  <monnier@iro.umontreal.ca>

	* minibuffer.el (minibuffer-message): Put cursor at the right place.

2008-04-13  Roland Winkler  <Roland.Winkler@physik.uni-erlangen.de>

	* proced.el (proced-send-signal): Fix error recognition.

2008-04-13  Roland Winkler  <Roland.Winkler@physik.uni-erlangen.de>

	* proced.el (proced-command-alist): Remove sort column.
	(proced-command, proced-procname-column):
	Use make-variable-buffer-local.
	(proced-signal-function): Rename from proced-kill-program.
	Allow for elisp symbols and string values representing system calls.
	(proced-marker-regexp, proced-success-message): New functions.
	(proced): Use defalias.  Add autoload cookie.
	(proced-unmark-backward, proced-toggle-marks)
	(proced-hide-processes): New commands.
	(proced-do-mark): Simplify code.
	(proced-insert-mark): Use optional arg BACKWARD instead of line number.
	(proced-update): Remove sorting.
	(proced-send-signal): Display number of processes to operate on.
	Allow for system calls or elisp functions to send signals.
	Check if signal was sent successfully.

2008-04-13  Stefan Monnier  <monnier@iro.umontreal.ca>

	* minibuffer.el (completion-all-completion-with-base-size): New var.